--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,7 @@ h6 {
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px  3px rgba(0, 0, 0, 1);
   white-space: nowrap;
   transition: 0.3s;
 }
